--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,8 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
-CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_BACKLIGHT=y
+CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
