--- a/config/corne.conf
+++ b/config/corne.conf
@@ -6,12 +6,12 @@ CONFIG_WS2812_STRIP=y
  # ######################################################
 ## RGB Backlight
 ## ZMK doesn't support per-key backlighting. The only lighting code that works with RGB LEDs is the underglow code, hence the suggestion to add your backlight LEDs to be part of underglow
-CONFIG_ZMK_BACKLIGHT=y
+#CONFIG_ZMK_BACKLIGHT=y
 #CONFIG_LED_GPIO=y
-CONFIG_ZMK_BACKLIGHT_BRT_STEP=20
-CONFIG_ZMK_BACKLIGHT_BRT_START=40
+#CONFIG_ZMK_BACKLIGHT_BRT_STEP=20
+#CONFIG_ZMK_BACKLIGHT_BRT_START=40
 #CONFIG_ZMK_BACKLIGHT_ON_START=y
-CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
+#CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 #CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
 
 # Uncomment the following line to enable the Corne OLED Display
