--- a/config/corne.conf
+++ b/config/corne.conf
@@ -17,6 +17,7 @@ CONFIG_WS2812_STRIP=y
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
 
 # Enable deep sleep
 CONFIG_ZMK_SLEEP=y
