--- a/build.yaml
+++ b/build.yaml
@@ -17,10 +17,9 @@
 #     cmake-args: -DCONFIG_ZMK_STUDIO=y
 #     artifact-name: corne_left_with_studio
 #
+---
 include:
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: corne_left
-    snippet: zmk-usb-logging
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: corne_right
-    snippet: zmk-usb-logging
