--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,29 +1,6 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
-CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_ZMK_DISPLAY=y
-CONFIG_WS2812_STRIP=y
-
- # ######################################################
-## RGB Backlight
-## ZMK doesn't support per-key backlighting. The only lighting code that works with RGB LEDs is the underglow code, hence the suggestion to add your backlight LEDs to be part of underglow
-#CONFIG_ZMK_BACKLIGHT=y
-#CONFIG_LED_GPIO=y
-#CONFIG_ZMK_BACKLIGHT_BRT_STEP=20
-#CONFIG_ZMK_BACKLIGHT_BRT_START=40
-#CONFIG_ZMK_BACKLIGHT_ON_START=y
-#CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
-#CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
+# CONFIG_ZMK_RGB_UNDERGLOW=y
+# CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
-CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
-CONFIG_ZMK_WIDGET_WPM_STATUS=y
-
-# Enable deep sleep
-CONFIG_ZMK_SLEEP=y
-
-# Enhance Bluetooth power for better signal
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-
-# Set custom keyboard name
-CONFIG_ZMK_KEYBOARD_NAME="Corne V3"
+# CONFIG_ZMK_DISPLAY=y
