--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,14 +1,6 @@
-# Uncomment the following lines to enable the Corne RGB Underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
-CONFIG_ZMK_RGB_UNDERGLOW=y
-
-CONFIG_WS2812_STRIP=y
-
-CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=40
-CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+# Split key support
+CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT_BLE=y
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
@@ -20,5 +12,4 @@ CONFIG_ZMK_WIDGET_WPM_STATUS=y
 
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
-
 CONFIG_ZMK_KEYBOARD_NAME="korn"
