--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,15 +1,6 @@
-# Split key support
-CONFIG_ZMK_SPLIT=y
-CONFIG_ZMK_SPLIT_BLE=y
+# Uncomment the following lines to enable the Corne RGB Underglow
+# CONFIG_ZMK_RGB_UNDERGLOW=y
+# CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
-CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_WIDGET_LAYER_STATUS=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
-# WPM FOR FUN
-CONFIG_ZMK_WPM=y
-CONFIG_ZMK_WIDGET_WPM_STATUS=y
-
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
-CONFIG_ZMK_KEYBOARD_NAME="korn"
+# CONFIG_ZMK_DISPLAY=y
