--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,13 +1,10 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
+# CONFIG_ZMK_RGB_UNDERGLOW=y
+# CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
-
-# Enhance Bluetooth power for better signal
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Set custom keyboard name
 CONFIG_ZMK_KEYBOARD_NAME="korn"
