--- a/config/corne.conf
+++ b/config/corne.conf
@@ -8,3 +8,5 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 
 # Set custom keyboard name
 CONFIG_ZMK_KEYBOARD_NAME="korn"
+
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
