--- a/config/corne.conf
+++ b/config/corne.conf
@@ -10,3 +10,4 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_KEYBOARD_NAME="korn"
 
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
