--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,13 +1,26 @@
-# Uncomment the following lines to enable the Corne RGB Underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
+# Keyboard name
+CONFIG_ZMK_KEYBOARD_NAME="korn"
 
-# Uncomment the following line to enable the Corne OLED Display
+# Connection
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
+
+# Underglow
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=0
+CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=100
+
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=50
+
+# Backlight
+CONFIG_ZMK_BACKLIGHT=y
+CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
+
+# OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 
-# Set custom keyboard name
-CONFIG_ZMK_KEYBOARD_NAME="korn"
 
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
