--- a/config/corne.conf
+++ b/config/corne.conf
@@ -7,6 +7,7 @@ CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
 
 # Underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=0
