--- a/config/corne.conf
+++ b/config/corne.conf
@@ -18,6 +18,10 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=50
 
 # OLED Display
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=n
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
 
-
+# Power
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_EXT_POWER=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
