--- a/config/corne.conf
+++ b/config/corne.conf
@@ -6,20 +6,20 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
 
 # Underglow
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+# CONFIG_ZMK_RGB_UNDERGLOW=y
+# CONFIG_WS2811_STRIP=y
+# CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=0
-CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=20
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=10
+# CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=0
+# CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=20
+# CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=10
 
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=20
+# CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=20
 
 # OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=n
-CONFIG_ZMK_WIDGET_WPM_STATUS=n
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
 
 # Power
 CONFIG_ZMK_IDLE_TIMEOUT=300000
