--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,6 +4,7 @@ CONFIG_ZMK_KEYBOARD_NAME="korn"
 # Connection
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
+CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 
 # Underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
